PCとSPの基本的なレイアウト設計

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,48 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>Document</title>
-  <link rel="stylesheet" href="./styles/style.css">
+  <meta name="description" content="">
+  <meta name="keyword" content="">
+
+  <meta property="og:image" content=""/>
+  <link rel="apple-touch-ico-precomposed" href="">
+  <link rel="shortlink" href="" />
+
+  <!--[if lte IE 8 ]>
+  <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <![endif]-->
+
+  <link rel="stylesheet" href="./styles/style.css" media="all">
+  <link rel="stylesheet" href="./styles/style_pc.css" media="screen and (min-width:960px),print">
 </head>
 <body>
-  <h1>テスト</h1>
-  <ul><li>テスト</li><li>テスト</li><li>テスト</li></ul>
+  <div class="container">
+    <div class="contents">
+      <article class="mainCont">
+        <h1>heading 1</h1>
+        <p>テキスト1234567890</p>
+      </article>
+      <div class="glNav">
+        <header class="logo"><h1>LOGO</h1></header>
+        <nav class="mainNav">
+          <ul>
+            <li><a href="">about</a></li>
+            <li><a href="">menu</a></li>
+            <li><a href="">shop</a></li>
+            <li><a href="">coupon</a></li>
+          </ul>
+        </nav>
+        <div class="utility">
+          <ul>
+            <li><a href="">会社情報</a></li>
+            <li><a href="">お問い合わせ</a></li>
+          </ul>
+        </div>
+      </div><!-- glNav -->
+    </div>
+  </div>
 </body>
 </html>
