トップの画像もダミー置き

--- a/public/2.html
+++ b/public/2.html
@@ -23,9 +23,8 @@
   <div class="container">
     <div class="contents">
       <article class="mainCont">
-        <div class="topImg">
-          <img src="./images/top/1.png" alt="">
-        </div>
+        <h1>heading 1</h1>
+        <p>テキスト1234567890</p>
       </article>
       <div class="glNav">
         <header class="logo"><h1>LOGO</h1></header>
