カラム作成

--- a/public/2.html
+++ b/public/2.html
@@ -17,7 +17,6 @@
   <![endif]-->
 
   <link rel="stylesheet" href="./styles/style.css" media="all">
-  <link rel="stylesheet" href="./styles/style_pc.css" media="screen and (min-width:960px),print">
 </head>
 <body>
   <div class="container">
@@ -25,6 +24,16 @@
       <article class="mainCont">
         <h1>heading 1</h1>
         <p>テキスト1234567890</p>
+        <div class="column col3">
+          <div clasS="item">一個目のカラム</div>
+          <div clasS="item">二個目のカラム</div>
+          <div clasS="item">三個目のカラム</div>
+        </div>
+
+        <div class="column col2">
+          <div clasS="item">一個目のカラム</div>
+          <div clasS="item">二個目のカラム</div>
+        </div>
       </article>
       <div class="glNav">
         <header class="logo"><h1>LOGO</h1></header>
