カラム調整とimage_unit作成

--- a/public/2.html
+++ b/public/2.html
@@ -25,14 +25,36 @@
         <h1>heading 1</h1>
         <p>テキスト1234567890</p>
         <div class="column col3">
-          <div clasS="item">一個目のカラム</div>
-          <div clasS="item">二個目のカラム</div>
-          <div clasS="item">三個目のカラム</div>
+          <div clasS="item"><div class="itemIn">一個目のカラム</div></div>
+          <div clasS="item"><div class="itemIn">二個目のカラム</div></div>
+          <div clasS="item"><div class="itemIn">三個目のカラム</div></div>
         </div>
 
         <div class="column col2">
-          <div clasS="item">一個目のカラム</div>
-          <div clasS="item">二個目のカラム</div>
+          <div class="item">
+            <div clasS="itemIn">
+              <div class="imgUnit">
+                <img src="http://dummyimage.com/100x100/000/fff" alt="">
+                <div class="txt">説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。</div>
+              </div>
+              <div class="imgUnit">
+                <img src="http://dummyimage.com/100x100/000/fff" alt="">
+                <div class="txt">説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。</div>
+              </div>
+          </div>
+          </div>
+          <div clasS="item">
+            <div class="itemIn">
+              <div class="imgUnit">
+                <img src="http://dummyimage.com/100x100/000/fff" alt="">
+                <div class="txt">説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。</div>
+              </div>
+              <div class="imgUnit">
+                <img src="http://dummyimage.com/100x100/000/fff" alt="">
+                <div class="txt">説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。</div>
+              </div>
+            </div>
+          </div>
         </div>
       </article>
       <div class="glNav">
