--- a/public/2.html
+++ b/public/2.html
@@ -27,7 +27,7 @@
         <div class="column col3">
           <div clasS="item"><div class="itemIn">一個目のカラム</div></div>
           <div clasS="item"><div class="itemIn">二個目のカラム</div></div>
-          <div clasS="item"><div class="itemIn">三個目のカラム</div></div>
+          <div clasS="item"><div class="itemIn">三個目のカラム1234567890</div></div>
         </div>
 
         <div class="column col2">
