--- a/public/2.html
+++ b/public/2.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>Document</title>
   <meta name="description" content="">
@@ -18,12 +18,46 @@
 
   <link rel="stylesheet" href="./styles/style.css" media="all">
 </head>
-<body>
+<body class="bg1">
   <div class="container">
     <div class="contents">
       <article class="mainCont">
-        <h1>heading 1</h1>
-        <p>テキスト1234567890</p>
+        <div class="section">
+          <h1 class="head1">七宝麻辣湯について</h1>
+          <p class="lineL">「七宝麻辣湯」は中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店です。</p>
+        </div>
+
+        <section class="section">
+          <h1 class="head2">「麻辣湯」</h1>
+          <div class="imgUnit imgR">
+            <img src="./images/about/pic1.jpg" alt="" width="180">
+            <div class="txt lineL">麻辣湯とは、バラエティ豊富なトッピングから好きなものを選べる楽しさと、自分好みの辛さを選択出来る美味しいスープで、上海を中心に中国全土で大ブームのスープ春雨です。日本では2007年に当店が渋谷で初出店しました。<br>
+              秘伝のスープには鶏や豚のコラーゲンがたっぷり。辛いスープに入っている唐辛子のカプサイシンは脂肪を燃焼させる効果があり、ヘルシーな春雨、トッピングの野菜に含まれる食物繊維がひとつになった、究極のダイエットフードです。<br>
+              使用する30種類以上のスパイスは、中国ではほとんどが漢方薬として使われています。美味しく食事して健康を維持する“医食同源”が七宝麻辣湯のコンセプト。大茴香による抗ガン作用、花椒による冷え症の改善、淮山の美肌効果、丁子による消化機能の促進、孜然による整腸作用など、さまざまなデトックス効果が期待できます。
+            </div>
+          </div>
+        </section>
+
+        <section class="section">
+          <h1 class="head2">「薬膳火鍋」</h1>
+          <div class="imgUnit imgR">
+            <img src="./images/about/pic2.jpg" alt="" width="180">
+            <div class="txt lineL">麻辣湯のルーツは火鍋にあると言われており、ベースのスープは同じです。麻辣湯のスープは様々な具材を煮込み、さらに毎日継ぎ足すことで、鰻のタレのように深みのある味に育っていきます。七宝薬膳火鍋では、このスープに各種スパイスや薬膳素材を加え、麻辣湯とはまた表情の異なる味わいをお楽しみいただいております。<br>
+              これは、一般の火鍋店にはない、麻辣湯と火鍋を同じ店内で提供する当店の大きなメリットです。<br>
+              「七宝麻辣湯」では野菜、海鮮、肉類、点心など、常に30～50種類のトッピングを用意しております。出来るだけ沢山のトッピングを楽しんでいただきたいので、食べ放題プランをお薦めしております。季節はもちろん、その日によっても変わる様々なトッピングで火鍋をお楽しみください。</div>
+          </div>
+        </section>
+
+
+
+
+
+
+
+
+
+
+
         <div class="column col3">
           <div clasS="item"><div class="itemIn">一個目のカラム</div></div>
           <div clasS="item"><div class="itemIn">二個目のカラム</div></div>
@@ -47,7 +81,11 @@
             <div class="itemIn">
               <div class="imgUnit">
                 <img src="http://dummyimage.com/100x100/000/fff" alt="">
-                <div class="txt">説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。</div>
+                <div class="txt">説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。</div>
+              </div>
+              <div class="imgUnit imgR">
+                <img src="http://dummyimage.com/100x100/000/fff" alt="">
+                <div class="txt rect lineL">説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。説明文が入ります。</div>
               </div>
               <div class="imgUnit">
                 <img src="http://dummyimage.com/100x100/000/fff" alt="">
@@ -56,15 +94,45 @@
             </div>
           </div>
         </div>
+
+        <div class="imgUnitFixed">
+          <div class="item">
+            <dl class="shopDataList">
+              <dt>住所</dt>
+              <dd>東京都港区赤坂3-8-8 赤坂フローラルプラザビル 1F</dd>
+              <dt>TEL/FAX</dt>
+              <dd><a href="tel:03-6435-5941" class="tel">03-6435-5941</a></dd>
+              <dt>アクセス</dt>
+              <dd>東京メトロ　赤坂見附駅から徒歩3分</dd>
+              <dt>営業時間</dt>
+              <dd>[月～土、祝]11:30～23:00　[日]18:00～23:00</dd>
+              <dt>定休日</dt>
+              <dd>年中無休</dd>
+            </dl>
+          </div>
+          <div class="itemImg">
+            <div class="gallery">
+              <div class="main">
+                <img src="./images/shops/akasaka1.jpg" alt="">
+              </div>
+              <ul class="imgList">
+                <li><img src="./images/shops/akasaka2.jpg" alt=""></li>
+                <li><img src="./images/shops/akasaka3.jpg" alt=""></li>
+                <li><img src="./images/shops/akasaka4.jpg" alt=""></li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
       </article>
       <div class="glNav">
-        <header class="logo"><h1>LOGO</h1></header>
+        <header class="logo"><a href=""><h1>七宝麻辣湯</h1></a></header>
         <nav class="mainNav">
           <ul>
-            <li><a href="">about</a></li>
-            <li><a href="">menu</a></li>
-            <li><a href="">shop</a></li>
-            <li><a href="">coupon</a></li>
+            <li class="cur"><a href="">七宝麻辣湯について</a></li>
+            <li><a href="">メニュー</a></li>
+            <li><a href="">店舗情報</a></li>
+            <li><a href="">クーポン</a></li>
           </ul>
         </nav>
         <div class="utility">
