--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <title>Document</title>
   <meta name="description" content="">
@@ -18,28 +18,28 @@
 
   <link rel="stylesheet" href="./styles/style.css" media="all">
 </head>
-<body>
-  <div class="container">
-    <div class="contents">
+<body class="bg1">
+  <div class="container ">
+    <div class="contents topCont">
       <article class="mainCont">
         <div class="topImg">
-          <img src="./images/top/1.png" alt="">
+          <img src="./images/top/sp_top.jpg" alt="">
         </div>
       </article>
       <div class="glNav">
-        <header class="logo"><h1>LOGO</h1></header>
+        <header class="logo"><a href="./"><h1>七宝麻辣湯</h1></a></header>
         <nav class="mainNav">
           <ul>
-            <li><a href="">about</a></li>
-            <li><a href="">menu</a></li>
-            <li><a href="">shop</a></li>
-            <li><a href="">coupon</a></li>
+            <li><a href="./about/">七宝麻辣湯について</a></li>
+            <li><a href="./menu/">メニュー</a></li>
+            <li><a href="./shops/">店舗情報</a></li>
+            <li><a href="./coupon/">クーポン</a></li>
           </ul>
         </nav>
         <div class="utility">
           <ul>
-            <li><a href="">会社情報</a></li>
-            <li><a href="">お問い合わせ</a></li>
+            <li><a href="./company/">会社情報</a></li>
+            <li><a href="mailto:zetter@dh.catv.ne.jp?Subject=Inquiries form maratan.com" class="mail">お問い合わせ</a></li>
           </ul>
         </div>
       </div><!-- glNav -->
