ページを全て作成

--- a/public/company/index.html
+++ b/public/company/index.html
@@ -23,12 +23,22 @@
     <div class="contents">
       <article class="mainCont">
         <div class="section">
-          <h1 class="head1">クーポン</h1>
-          <p class="lineL">麻辣湯専用クーポンです。赤坂本店、渋谷店、なんばパークス店共通でご利用頂けます。</p>
+          <h1 class="head1">会社情報</h1>
         </div>
 
         <section class="section">
-          <img src="../images/coupon/coupon.jpg" alt="" class="couponImg">
+          <dl class="companyDataList">
+            <dt>名称</dt>
+            <dd>株式会社カシュカシュ</dd>
+          </dl>
+          <dl class="companyDataList">
+            <dt>代表取締役</dt>
+            <dd>石上 秀幸</dd>
+          </dl>
+          <dl class="companyDataList">
+            <dt>所在地</dt>
+            <dd>東京都渋谷区桜丘町15-8 高木産業会館316</dd>
+          </dl>
         </section>
 
 
@@ -40,7 +50,7 @@
             <li><a href="../about/">七宝麻辣湯について</a></li>
             <li><a href="../menu/">メニュー</a></li>
             <li><a href="../shops/">店舗情報</a></li>
-            <li class="cur"><a href="../coupon/">クーポン</a></li>
+            <li><a href="../coupon/">クーポン</a></li>
           </ul>
         </nav>
         <div class="utility">
