--- a/public/menu/drink.html
+++ b/public/menu/drink.html
@@ -23,14 +23,19 @@
     <div class="contents">
       <article class="mainCont">
         <div class="section">
-          <h1 class="head1">クーポン</h1>
-          <p class="lineL">麻辣湯専用クーポンです。赤坂本店、渋谷店、なんばパークス店共通でご利用頂けます。</p>
+          <h1 class="head1">メニュー</h1>
+          <ul class="subnav">
+            <li><a href="./">麻辣湯</a></li>
+            <li><a href="./hinabe.html">薬膳火鍋</a></li>
+            <li class="cur"><a href="./drink.html">ドリンク（赤坂本店）</a></li>
+          </ul>
         </div>
 
         <section class="section">
-          <img src="../images/coupon/coupon.jpg" alt="" class="couponImg">
-        </section>
 
+
+          
+        </section>
 
       </article>
       <div class="glNav">
@@ -38,9 +43,15 @@
         <nav class="mainNav">
           <ul>
             <li><a href="../about/">七宝麻辣湯について</a></li>
-            <li><a href="../menu/">メニュー</a></li>
+            <li class="cur"><a href="../menu/">メニュー</a>
+              <ul class="sub">
+                <li><a href="./">麻辣湯</a></li>
+                <li><a href="./hinabe.html">薬膳火鍋</a></li>
+                <li class="cur"><a href="./drink.html">ドリンク（赤坂本店）</a></li>
+              </ul>
+            </li>
             <li><a href="../shops/">店舗情報</a></li>
-            <li class="cur"><a href="../coupon/">クーポン</a></li>
+            <li><a href="../coupon/">クーポン</a></li>
           </ul>
         </nav>
         <div class="utility">
