全ページ作成一通り完了

--- a/public/menu/drink.html
+++ b/public/menu/drink.html
@@ -32,10 +32,200 @@
         </div>
 
         <section class="section">
+          <h1 class="head2">ドリンク（赤坂本店）</h1>
+          <div class="imgUnit imgR">
+            <img src="../images/menu/drink1.jpg" alt="" width="180">
+            <div class="txt rect lineL">中国を代表する蒸留酒の白酒(パイチュウ)は、日本でも屈指の品揃え。<br>パイチュウをベースにしたオリジナルカクテルや、新鮮な野菜で作る青汁ハイ、自家製ジャムを加えた各種チューハイなど、他では飲めないオリジナルドリンクを多数取り揃え。
+            </div>
+          </div>
+
+          <section class="section">
+            <h1 class="head3">七宝パイチュースタイル</h1>
+
+            <div class="column col2">
+              <div class="item">
+                <div clasS="itemIn">
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu1.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パヒート</dt>
+                        <dd>ラムの代わりにパイチューを使ったチャイニーズモヒート。自家栽培ミントの爽やかな香りが火鍋の辛いスープにもピッタリ。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu2.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>ブラディパリー</dt>
+                        <dd>トマトジュースをベースにリーペリンソースやタバスコを使った刺激的なカクテル。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu3.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パイチューハイ</dt>
+                        <dd>パイチュー特有の芳醇な香りに、柑橘類の中でも野性味のある香りが魅力のライムを合わせた、黄金比の新チューハイ。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu4.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パイピリーニャ</dt>
+                        <dd>世界中で大人気のカクテル「カイピリーニャ」をモチーフに。たっぷりのライムを潰しながら。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu5.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パレトニ</dt>
+                        <dd>イタリアで広く親しまれているリキュール「レモンチェロ」とトニックウォーターを使った、甘く魅惑的な口当たり。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu6.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パイトニック</dt>
+                        <dd>パイチューの甘い芳香を、対極的なミントとライムの爽快さで照らした、清々しい飲み口。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu7.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パイローニ</dt>
+                        <dd>ベルモットの妖艶な香りが、華やかなパイチューの新たな一面を引き出す。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu8.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パイパニー</dt>
+                        <dd>パイチュー版”はちみつレモン”。パイチューの甘い香りははちみつと相性抜群！</dd>
+                      </dl>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div clasS="item">
+                <div class="itemIn">
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu9.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>レッドパイ</dt>
+                        <dd>パイチューとトマトの意外な相性。フルーティーで透明感のある味わい。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu10.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パイパイン</dt>
+                        <dd>パイナップルのトロピカルな香りと、パイチューの甘く華やかな香りが溶け合った、女性におすすめのカクテル。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu11.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パイボール</dt>
+                        <dd>当店自慢の強炭酸水とライムを合わせた爽快なハイボール。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu12.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>レモンパロ</dt>
+                        <dd>パイチューと抜群に相性が良い、レモンリキュールを合わせた会心のカクテル。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu13.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パイナブルー</dt>
+                        <dd>パイチューの魅力であるフルーティーな香りに、ライチやグレープフルーツを重ねた瑞々しい味。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu14.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>パイバック</dt>
+                        <dd>ジンとの相性にも引けを取らない、辛口のジンジャエールが映えるパイチューカクテル。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="imgUnit nrwSpace">
+                    <img src="../images/menu/paichu15.jpg" alt="">
+                    <div class="txt rect">
+                      <dl class="drinkDataList">
+                        <dt>プラパイ</dt>
+                        <dd>プラムリキュールとパイチューを合わせた濃密なカクテル。甘いお酒が好きな方には特におすすめ。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="section">
+            <h1 class="head3">パイチュー（白酒）</h1>
+            <ul class="discList">
+              <li>老白汾酒（ロウパイフンチュウ）53℃　清香タイプ　山西省</li>
+              <li>貴州茅台酒（キシュウマオタイチュウ）53℃　醤香タイプ　貴州省</li>
+              <li>茅台迎賓酒（マオタイゲイヒチュウ）53℃　醤香タイプ　貴州省</li>
+              <li>孔府家酒（コウフカシチュウ）39℃　濃香タイプ　山東省</li>
+              <li>五粮液（ゴリョウエキ）52℃　濃香タイプ　四川省</li>
+              <li>五粮醇（ゴリョウジュン）45℃　濃香タイプ　四川省</li>
+              <li>二十年陳高粮酒(20年コウリャンチュウ)53℃　天津市</li>
+              <li>天津高梁酒（テンシンコウリャンチュウ）62℃　天津市</li>
+              <li>金星高粮酒(キンボシコウリャンチュウ)52℃　天津市</li>
+              <li>二鍋頭酒（アルコードチュウ）56℃　醤香タイプ　北京市</li>
+              <li>精品二鍋頭酒（アルコードチュウ）52℃　醤香タイプ　北京市</li>
+              <li>広東米酒（カントンミーチュウ）29℃　広東省</li>
+              <li>貴州醇（キシュウジュン）35℃　濃香タイプ　貴州省</li>
+              <li>金六福（キンロップク）38℃　濃香タイプ　四川省</li>
+              <li>文君（ウェンジュン）</li>
+              <li>etc...</li>
+            </ul>
+          </section>
 
 
-          
+          <section class="section">
+            <h1 class="head3">その他</h1>
+            <ul class="discList">
+              <li>生ビール（ザプレミアムモルツ）</li>
+              <li>ハイボール<div>角ハイボール、角ハイコーラ、角ハイジンジャー、トリスハイボール、山崎プレミアムハイボール、白州森香るハイボール<div></li>
+              <li>サワー<div>生グレーフルーツサワー、生レモンサワー、豆乳ハイ、ウーロンハイ、パイチューハイ、パイチューサワー、カルピスサワー<div></li>
+              <li>カクテル<div>カシスウーロン、カシスオレンジ、カシスソーダ、ピーチウーロン、ジントニック、モスコミュール、ファジーネーブル、スクリュードライバー、シャンディガフ<div></li>
+              <li>ワイン各種</li>
+              <li>ノンアルコールドリンク<div>オールフリー<div></li>
+            </ul>
+
+          </section>
         </section>
+
 
       </article>
       <div class="glNav">
