--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -32,9 +32,68 @@
         </div>
 
         <section class="section">
+          <h1 class="head2">薬膳火鍋</h1>
+          <section class="section">
+            <h1 class="head3">薬膳火鍋コース<span>1名様 3,200円</span></h1>
+            <div class="imgUnit imgR">
+              <img src="../images/menu/hinabe1.jpg" alt="">
+              <div class="txt rect">
+                <p class="lineL">豚肉、羊肉、野菜盛り合わせ、豆腐、春雨、鍋用点心、麺または雑炊、デザート</p>
+                <div class="borderUnit">
+                  具材バーから好きな具を好きなだけ！ <br>プラス900円で2時間食べ放題
+                </div>
+              </div>
+            </div>
+
+            <section class="section">
+              <h1 class="head4">選べる2種類のスープ</h1>
+              <div class="sectionInner">
+                <div class="column col2 nrwSpaceV">
+                  <div class="item">
+                    <div class="itemIn">
+                      <dl class="soupDataList1">
+                        <dt>強壮薬膳湯<img src="../images/menu/icon_recommend.png"></dt>
+                        <dd>当帰・党参・良姜などの薬膳素材をふんだんに使用したスープ。漢方の味が強いが、慣れると止まらなくなる奥深い味。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                  <div class="item">
+                    <div class="itemIn">
+                      <dl class="soupDataList1">
+                        <dt>薬膳麻辣湯<img src="../images/menu/icon_recommend.png"></dt>
+                        <dd>30種類以上の薬膳素材と秘伝の自家製ラー油を重ね合わせ、辛さと旨味と華やかな香りが渾然一体となった当店自慢のスープ。</dd>
+                      </dl>
+                    </div>
+                  </div>
+                </div>
+                
+                <dl class="soupDataList2">
+                  <dt>酸菜湯<span>スヮンツァイタン</span></dt>
+                  <dd>中国東北部では、鍋料理の材料に白菜や高菜などで「酸菜」という漬物を使う。具であると同時にスープの味付けの要となり、酸味と独特の風味がクセになる。</dd>
+                </dl>
+                <dl class="soupDataList2">
+                  <dt>鹹豆漿湯<span>シェンドゥジャンタン</span></dt>
+                  <dd>中国では温かい豆乳が人気で専門店も沢山あり、甘い豆乳は「甜豆漿」、塩味や出汁食材を合わせた豆乳は「鹹豆漿」と呼ばれ、ヘルシーで鍋にも良く合う。ゆるく固まった豆腐も具として楽しめる。</dd>
+                </dl>
+                <dl class="soupDataList2">
+                  <dt>トムヤム湯</dt>
+                  <dd>本場中国でも火鍋は様々な種類のスープが開発されているが、当店では南方系の中国料理とも接点が深いタイ料理のトムヤムクンをアレンジした酸っぱ辛いスープを開発。</dd>
+                </dl>
+              </div>
+            </section>
+ 
+          </section>
 
 
-          
+          <section class="section">
+            <h1 class="head3">七宝特製スッポン火鍋コース（要予約）<span>1名様 7,800円</span></h1>
+            <div class="imgUnit imgR">
+              <img src="../images/menu/hinabe3.jpg" alt="">
+              <div class="txt">
+                <p class="lineL">当店では鍋料理の究極を目指し、滋養強壮の代表食材でもあるスッポンを使った唯一無二の火鍋をご用意致しました。スッポン料理が最も盛んな中国の調理技術と、”まる鍋”と呼ばれる日本のスッポン鍋の長所を融合させた、スッポンの魅力を最大限に生かした鍋です。スッポンの極上出汁を真正面から味わえる清湯スープと、さまざまな素材と合わさっても魅力を失わない、スッポンの懐の深さを堪能できる薬膳スープの2種類を楽しんでいただきます。<br>スッポンは築地「川魚小林」様より、静岡県浜松の「服部中村養鼈場」をはじめとした、季節ごとに最も品質の高い元気なスッポンを仕入れて調理直前に捌くため、2日前までの予約が必要となります。スッポンのあらゆる部位が楽しめて滋養強壮効果も満点な、究極スッポン料理をお楽しみください。</p>
+              </div>
+            </div>
+          </section>
         </section>
 
       </article>
