--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -32,9 +32,63 @@
         </div>
 
         <section class="section">
+          <h1 class="head2">麻辣湯</h1>
 
+          <section class="section">
+            <div class="column col3">
+              <div clasS="item"><div class="itemIn">
+                <h1 class="head5">七宝特別メニュー</h1>
+                <dl class="menuDataList">
+                  <dt>薬膳麻辣湯(０辛に最高の相性！)</dt>
+                  <dd>プラス110円</dd>
+                  <dt>強壮白湯(0辛にオススメ！）</dt>
+                  <dd>プラス110円</dd>
+                  <dt>強壮白トムヤムタン</dt>
+                  <dd>プラス110円</dd>
+                  <dt>七宝特製担担麺 </dt>
+                  <dd>870円</dd>
+                </dl>
+              </div></div>
+              <div clasS="item"><div class="itemIn">
+                <h1 class="head5">ご飯もの</h1>
+                <dl class="menuDataList">
+                  <dt>魯肉飯（ルーローハン）</dt>
+                  <dd>700円</dd>
+                  <dt>ミニ魯肉飯</dt>
+                  <dd>370円</dd>
+                  <dt>七宝卵ごはん</dt>
+                  <dd>260円</dd>
+                  <dt>豚しゃぶ飯 </dt>
+                  <dd>270円</dd>
+                </dl>
+              </div></div>
+              <div clasS="item"><div class="itemIn">
+                <h1 class="head5">デザート</h1>
+                <dl class="menuDataList">
+                  <dt>杏仁豆腐</dt>
+                  <dd>310円</dd>
+                  <dt>愛玉子(オーギョーチー）</dt>
+                  <dd>310円</dd>
+                </dl>
+              </div></div>
+            </div>
+          </section>
 
-          
+          <section class="section">
+            <div class="asideUnit">
+              <h1 class="asideTtl">美味しい食べ方</h1>
+              <div class="asideCont">
+                <ol class="numList">
+                  <li><img src="../images/menu/icon_1.png" alt="">卓上の刻みニンニク（1～2杯）を入れるとパンチの効いた味わいに！</li>
+                  <li><img src="../images/menu/icon_2.png" alt="">花椒（しびれます！）と黒酢（サッパリ）はお好みで！</li>
+                  <li><img src="../images/menu/icon_3.png" alt="">薬膳麻辣湯（110円）を追加すると、風味倍増で超オススメです！</li>
+                  <li><img src="../images/menu/icon_4.png" alt="">1杯で2度美味しい！コラーゲン玉（110円）でマイルドに、ココナッツ玉、しょうが玉、柚子コショウ玉も大人気！</li>
+                  <li><img src="../images/menu/icon_5.png" alt="">残ったスープにライスを入れて雑炊風に！卵を入れても美味しいです！</li>
+                  <li><img src="../images/menu/icon_6.png" alt="">麻辣湯とビール、泣けるほど合います！ </li>
+                </ol>
+              </div>
+            </div>
+          </section>
         </section>
 
       </article>
