FB対応, メタ反映

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Document</title>
-  <meta name="description" content="">
-  <meta name="keyword" content="">
+  <title>七宝麻辣湯について | 七宝麻辣湯</title>
+  <meta name="description" content="「七宝麻辣湯」についてご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
+  <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
@@ -18,8 +18,8 @@
 
   <link rel="stylesheet" href="../styles/style.css" media="all">
 </head>
-<body class="bg1">
-  <div class="container">
+<body>
+  <div class="container bg1">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
@@ -31,9 +31,11 @@
           <h1 class="head2">「麻辣湯」</h1>
           <div class="imgUnit imgR">
             <img src="../images/about/pic1.jpg" alt="" width="180">
-            <div class="txt lineL">麻辣湯とは、バラエティ豊富なトッピングから好きなものを選べる楽しさと、自分好みの辛さを選択出来る美味しいスープで、上海を中心に中国全土で大ブームのスープ春雨です。日本では2007年に当店が渋谷で初出店しました。<br>
-              秘伝のスープには鶏や豚のコラーゲンがたっぷり。辛いスープに入っている唐辛子のカプサイシンは脂肪を燃焼させる効果があり、ヘルシーな春雨、トッピングの野菜に含まれる食物繊維がひとつになった、究極のダイエットフードです。<br>
-              使用する30種類以上のスパイスは、中国ではほとんどが漢方薬として使われています。美味しく食事して健康を維持する“医食同源”が七宝麻辣湯のコンセプト。大茴香による抗ガン作用、花椒による冷え症の改善、淮山の美肌効果、丁子による消化機能の促進、孜然による整腸作用など、さまざまなデトックス効果が期待できます。
+            <div class="txt">
+              <p class="lineL mb10">麻辣湯とは、バラエティ豊富なトッピングから好きなものを選べる楽しさと、自分好みの辛さを選択出来る美味しいスープで、上海を中心に中国全土で大ブームのスープ春雨です。日本では2007年に当店が渋谷で初出店しました。<br>
+                秘伝のスープには鶏や豚のコラーゲンがたっぷり。辛いスープに入っている唐辛子のカプサイシンは脂肪を燃焼させる効果があり、ヘルシーな春雨、トッピングの野菜に含まれる食物繊維がひとつになった、究極のダイエットフードです。<br>
+                使用する30種類以上のスパイスは、中国ではほとんどが漢方薬として使われています。美味しく食事して健康を維持する“医食同源”が七宝麻辣湯のコンセプト。大茴香による抗ガン作用、花椒による冷え症の改善、淮山の美肌効果、丁子による消化機能の促進、孜然による整腸作用など、さまざまなデトックス効果が期待できます。</p>
+              <p><a href="../menu/" class="nomalLink">麻辣湯メニュー</a></p>
             </div>
           </div>
         </section>
@@ -42,9 +44,12 @@
           <h1 class="head2">「薬膳火鍋」</h1>
           <div class="imgUnit imgR">
             <img src="../images/about/pic2.jpg" alt="" width="180">
-            <div class="txt lineL">麻辣湯のルーツは火鍋にあると言われており、ベースのスープは同じです。麻辣湯のスープは様々な具材を煮込み、さらに毎日継ぎ足すことで、鰻のタレのように深みのある味に育っていきます。七宝薬膳火鍋では、このスープに各種スパイスや薬膳素材を加え、麻辣湯とはまた表情の異なる味わいをお楽しみいただいております。<br>
-              これは、一般の火鍋店にはない、麻辣湯と火鍋を同じ店内で提供する当店の大きなメリットです。<br>
-              「七宝麻辣湯」では野菜、海鮮、肉類、点心など、常に30～50種類のトッピングを用意しております。出来るだけ沢山のトッピングを楽しんでいただきたいので、食べ放題プランをお薦めしております。季節はもちろん、その日によっても変わる様々なトッピングで火鍋をお楽しみください。</div>
+            <div class="txt">
+              <p class="lineL mb10">麻辣湯のルーツは火鍋にあると言われており、ベースのスープは同じです。麻辣湯のスープは様々な具材を煮込み、さらに毎日継ぎ足すことで、鰻のタレのように深みのある味に育っていきます。七宝薬膳火鍋では、このスープに各種スパイスや薬膳素材を加え、麻辣湯とはまた表情の異なる味わいをお楽しみいただいております。<br>
+                これは、一般の火鍋店にはない、麻辣湯と火鍋を同じ店内で提供する当店の大きなメリットです。<br>
+                「七宝麻辣湯」では野菜、海鮮、肉類、点心など、常に30～50種類のトッピングを用意しております。出来るだけ沢山のトッピングを楽しんでいただきたいので、食べ放題プランをお薦めしております。季節はもちろん、その日によっても変わる様々なトッピングで火鍋をお楽しみください。</p>
+              <p><a href="../menu/hinabe.html" class="nomalLink">薬膳火鍋メニュー</a></p>
+              </div>
           </div>
         </section>
 
