--- a/public/menu/hinabe.html
+++ b/public/menu/hinabe.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Document</title>
-  <meta name="description" content="">
-  <meta name="keyword" content="">
+  <title>薬膳火鍋 | メニュー | 七宝麻辣湯</title>
+  <meta name="description" content="薬膳火鍋のメニューをご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
+  <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
@@ -18,8 +18,8 @@
  
  <link rel="stylesheet" href="../styles/style.css" media="all">
 </head>
-<body class="bg1"><!--  onload="initialize()"> -->
-  <div class="container">
+<body><!--  onload="initialize()"> -->
+  <div class="container bg1">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
@@ -27,7 +27,7 @@
           <ul class="subnav">
             <li><a href="./">麻辣湯</a></li>
             <li class="cur"><a href="./hinabe.html">薬膳火鍋</a></li>
-            <li><a href="./drink.html">ドリンク（赤坂本店）</a></li>
+            <li><a href="./drink.html">ドリンク（赤坂店）</a></li>
           </ul>
         </div>
 
@@ -79,6 +79,26 @@
                   <dt>トムヤム湯</dt>
                   <dd>本場中国でも火鍋は様々な種類のスープが開発されているが、当店では南方系の中国料理とも接点が深いタイ料理のトムヤムクンをアレンジした酸っぱ辛いスープを開発。</dd>
                 </dl>
+                <dl class="soupDataList2">
+                  <dt>薬膳白湯</dt>
+                  <dd>鶏・豚・牛をベースにしたコラーゲンたっぷりの白湯スープに、30種類以上の薬膳素材を加えたスープ。薬膳の味を控目にしたいお客様向け。</dd>
+                </dl>
+                <dl class="soupDataList2">
+                  <dt>素食湯</dt>
+                  <dd>豆乳ベースのスープに七宝特製の薬膳ダレを合わせたスープ。ゆるく固まった豆腐も具として楽しめる。</dd>
+                </dl>
+                <dl class="soupDataList2">
+                  <dt>素食麻辣湯</dt>
+                  <dd>豆乳スープと薬膳ダレ、辛さとシビレが入り交じり、ベジタリアン仕様ながらパンチの効いた味わい。</dd>
+                </dl>
+                <dl class="soupDataList2">
+                  <dt>黒烏龍湯</dt>
+                  <dd>黒ウーロン茶のほのかな苦味と薬膳が融合した、サッパリした新感覚の鍋。</dd>
+                </dl>
+                <dl class="soupDataList2">
+                  <dt>黄酒湯</dt>
+                  <dd>紹興酒のコクと旨味を活かしたスープ。独特の香りが後を引く。</dd>
+                </dl>
               </div>
             </section>
  
@@ -106,7 +126,7 @@
               <ul class="sub">
                 <li><a href="./">麻辣湯</a></li>
                 <li class="cur"><a href="./hinabe.html">薬膳火鍋</a></li>
-                <li><a href="./drink.html">ドリンク（赤坂本店）</a></li>
+                <li><a href="./drink.html">ドリンク（赤坂店）</a></li>
               </ul>
             </li>
             <li><a href="../shops/">店舗情報</a></li>
