--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Document</title>
-  <meta name="description" content="">
-  <meta name="keyword" content="">
+  <title>麻辣湯 | メニュー | 七宝麻辣湯</title>
+  <meta name="description" content="麻辣湯のメニューをご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
+  <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
@@ -18,8 +18,8 @@
  
  <link rel="stylesheet" href="../styles/style.css" media="all">
 </head>
-<body class="bg1"><!--  onload="initialize()"> -->
-  <div class="container">
+<body><!--  onload="initialize()"> -->
+  <div class="container bg1">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
@@ -27,7 +27,7 @@
           <ul class="subnav">
             <li class="cur"><a href="./">麻辣湯</a></li>
             <li><a href="./hinabe.html">薬膳火鍋</a></li>
-            <li><a href="./drink.html">ドリンク（赤坂本店）</a></li>
+            <li><a href="./drink.html">ドリンク（赤坂店）</a></li>
           </ul>
         </div>
 
@@ -101,7 +101,7 @@
               <ul class="sub">
                 <li class="cur"><a href="./">麻辣湯</a></li>
                 <li><a href="./hinabe.html">薬膳火鍋</a></li>
-                <li><a href="./drink.html">ドリンク（赤坂本店）</a></li>
+                <li><a href="./drink.html">ドリンク（赤坂店）</a></li>
               </ul>
             </li>
             <li><a href="../shops/">店舗情報</a></li>
