--- a/public/shops/index.html
+++ b/public/shops/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Document</title>
-  <meta name="description" content="">
-  <meta name="keyword" content="">
+  <title>赤坂店 | 店舗情報 | 七宝麻辣湯</title>
+  <meta name="description" content="赤坂店についてご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
+  <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
@@ -15,40 +15,25 @@
   <!--[if lte IE 8 ]>
   <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
   <![endif]-->
-  <!-- 
-  <script type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBSlGJXQKShZHOoBECfDJCimvhvUWwKT6Y&sensor=false">
-    </script>
-     <script type="text/javascript">
-      function initialize() {
-        var mapOptions = {
-          center: new google.maps.LatLng(-34.397, 150.644),
-          zoom: 8,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        var map = new google.maps.Map(document.getElementById("map_canvas"),
-            mapOptions);
-      }
-    </script>
 
- -->  
+  
  <link rel="stylesheet" href="../styles/style.css" media="all">
 </head>
-<body class="bg1"><!--  onload="initialize()"> -->
+<body class="bg1" onload="initialize()">
   <div class="container">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
           <h1 class="head1">店舗情報</h1>
           <ul class="subnav">
-            <li class="cur"><a href="./">赤坂本店</a></li>
+            <li class="cur"><a href="./">赤坂店</a></li>
             <li><a href="./shibuya.html">渋谷店</a></li>
             <li><a href="./nanba.html">大阪なんばパークス店</a></li>
           </ul>
         </div>
 
         <section class="section">
-          <h1 class="head2">赤坂本店</h1>
+          <h1 class="head2">赤坂店</h1>
           <div class="imgUnitFixed">
           <div class="item">
             <dl class="shopDataList">
@@ -82,10 +67,12 @@
         </div>
         </section>
 
-       <!--  <div class="map">
-          <div id="map_canvas" style="width:100%; height:100%"></div>
+        <div class="map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3241.0541758614563!2d139.737339!3d35.675667999999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c78ca6ad025%3A0xf5ec7c394b47109f!2z5LiD5a6dIOm6u-i-o-a5ryDotaTlnYLlupc!5e0!3m2!1sja!2s!4v1406019790599" width="600" height="450" frameborder="0" style="border:0"></iframe>
         </div>
- -->
+        <!-- http://www.la-j.com/tech-blog/?p=305
+        https://support.google.com/maps/answer/3544418?hl=ja -->
+
       </article>
       <div class="glNav">
         <header class="logo"><a href="../"><h1>七宝麻辣湯</h1></a></header>
@@ -95,7 +82,7 @@
             <li><a href="../menu/">メニュー</a></li>
             <li class="cur"><a href="../shops/">店舗情報</a>
               <ul class="sub">
-                <li class="cur"><a href="./">赤坂本店</a></li>
+                <li class="cur"><a href="./">赤坂店</a></li>
                 <li><a href="./shibuya.html">渋谷店</a></li>
                 <li><a href="./nanba.html">大阪なんばパークス店</a></li>
               </ul>
