--- a/public/shops/nanba.html
+++ b/public/shops/nanba.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Document</title>
-  <meta name="description" content="">
-  <meta name="keyword" content="">
+  <title>大阪なんばパークス店 | 店舗情報 | 七宝麻辣湯</title>
+  <meta name="description" content="大阪なんばパークス店についてご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
+  <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
@@ -18,14 +18,14 @@
  
  <link rel="stylesheet" href="../styles/style.css" media="all">
 </head>
-<body class="bg1"><!--  onload="initialize()"> -->
-  <div class="container">
+<body><!--  onload="initialize()"> -->
+  <div class="container bg1">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
           <h1 class="head1">店舗情報</h1>
           <ul class="subnav">
-            <li><a href="./">赤坂本店</a></li>
+            <li><a href="./">赤坂店</a></li>
             <li><a href="./shibuya.html">渋谷店</a></li>
             <li class="cur"><a href="./nanba.html">大阪なんばパークス店</a></li>
           </ul>
@@ -71,7 +71,7 @@
             <li><a href="../menu/">メニュー</a></li>
             <li class="cur"><a href="../shops/">店舗情報</a>
               <ul class="sub">
-                <li><a href="./">赤坂本店</a></li>
+                <li><a href="./">赤坂店</a></li>
                 <li><a href="./shibuya.html">渋谷店</a></li>
                 <li class="cur"><a href="./nanba.html">大阪なんばパークス店</a></li>
               </ul>
