--- a/public/company/index.html
+++ b/public/company/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Document</title>
-  <meta name="description" content="">
-  <meta name="keyword" content="">
+  <title>会社情報 | 七宝麻辣湯</title>
+  <meta name="description" content="「七宝麻辣湯」を経営する株式会社カシュカシュの会社情報です。">
+  <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
@@ -18,8 +18,8 @@
  
  <link rel="stylesheet" href="../styles/style.css" media="all">
 </head>
-<body class="bg1"><!--  onload="initialize()"> -->
-  <div class="container">
+<body><!--  onload="initialize()"> -->
+  <div class="container bg1">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
@@ -33,7 +33,7 @@
           </dl>
           <dl class="companyDataList">
             <dt>代表取締役</dt>
-            <dd>石上 秀幸</dd>
+            <dd>石神 秀幸</dd>
           </dl>
           <dl class="companyDataList">
             <dt>所在地</dt>
