--- a/public/coupon/index.html
+++ b/public/coupon/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Document</title>
-  <meta name="description" content="">
-  <meta name="keyword" content="">
+  <title>クーポン | 七宝麻辣湯</title>
+  <meta name="description" content="お得なクーポンをご紹介。中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店「七宝麻辣湯」">
+  <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
@@ -18,13 +18,13 @@
  
  <link rel="stylesheet" href="../styles/style.css" media="all">
 </head>
-<body class="bg1"><!--  onload="initialize()"> -->
-  <div class="container">
+<body><!--  onload="initialize()"> -->
+  <div class="container bg1">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
           <h1 class="head1">クーポン</h1>
-          <p class="lineL">麻辣湯専用クーポンです。赤坂本店、渋谷店、なんばパークス店共通でご利用頂けます。</p>
+          <p class="lineL">麻辣湯専用クーポンです。赤坂店、渋谷店、なんばパークス店共通でご利用頂けます。</p>
         </div>
 
         <section class="section">
