--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>Document</title>
-  <meta name="description" content="">
-  <meta name="keyword" content="">
+  <title>七宝麻辣湯 - スープ春雨と薬膳火鍋の専門店</title>
+  <meta name="description" content="「七宝麻辣湯」は中国で広く親しまれているスープ春雨「麻辣湯」と「薬膳火鍋」の専門店です。">
+  <meta name="keyword" content="七宝麻辣湯,マーラータン,麻辣,マーラー,火鍋,春雨,スープ春雨">
 
   <meta property="og:image" content=""/>
   <link rel="apple-touch-ico-precomposed" href="">
@@ -18,8 +18,8 @@
 
   <link rel="stylesheet" href="./styles/style.css" media="all">
 </head>
-<body class="bg1">
-  <div class="container ">
+<body>
+  <div class="container bg1">
     <div class="contents topCont">
       <article class="mainCont">
         <div class="topImg">
