added google map

--- a/public/shops/index.html
+++ b/public/shops/index.html
@@ -67,11 +67,9 @@
         </div>
         </section>
 
-        <div class="map">
+        <div class="mapUnit">
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3241.0541758614563!2d139.737339!3d35.675667999999995!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188c78ca6ad025%3A0xf5ec7c394b47109f!2z5LiD5a6dIOm6u-i-o-a5ryDotaTlnYLlupc!5e0!3m2!1sja!2s!4v1406019790599" width="600" height="450" frameborder="0" style="border:0"></iframe>
         </div>
-        <!-- http://www.la-j.com/tech-blog/?p=305
-        https://support.google.com/maps/answer/3544418?hl=ja -->
 
       </article>
       <div class="glNav">
