--- a/public/shops/nanba.html
+++ b/public/shops/nanba.html
@@ -61,6 +61,10 @@
         </div>
         </section>
 
+        <div class="mapUnit">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3281.7262805299742!2d135.50175199999998!3d34.661615!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e76bf7b8d465%3A0x433d29487c8ce370!2z5LiD5a6d6bq76L6j5rmvIOOBquOCk-OBsOODkeODvOOCr-OCueW6lw!5e0!3m2!1sja!2sjp!4v1406095472443" width="600" height="450" frameborder="0" style="border:0"></iframe>
+        </div>
+
 
       </article>
       <div class="glNav">
