--- a/public/shops/shibuya.html
+++ b/public/shops/shibuya.html
@@ -63,6 +63,9 @@
         </div>
         </section>
 
+        <div class="mapUnit">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.837624709304!2d139.70157000000003!3d35.656372000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b59e1618d81%3A0xd0ae44fda20b1ce4!2z5LiD5a6d6bq76L6j5rmv!5e0!3m2!1sja!2sjp!4v1406095385751" width="600" height="450" frameborder="0" style="border:0"></iframe>
+        </div>
 
       </article>
       <div class="glNav">
