--- a/public/index.html
+++ b/public/index.html
@@ -15,16 +15,19 @@
   <!--[if lte IE 8 ]>
   <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
   <![endif]-->
+  <link rel="stylesheet" href="./styles/base.css" media="all">
 
-  <link rel="stylesheet" href="./styles/style.css" media="all">
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="./script/base.js"></script>
+
 </head>
 <body>
-  <div class="container bg1">
+  <div class="container">
     <div class="contents topCont">
       <article class="mainCont">
-        <div class="topImg">
-          <img src="./images/top/sp_top.jpg" alt="">
-        </div>
+        <div class="topImg bg1"><img src="./images/top/sp_top.jpg" alt=""></div>
+        <div class="topImg bg2"></div>
+        <div class="topImg bg3"></div>
       </article>
       <div class="glNav">
         <header class="logo"><a href="./"><h1>七宝麻辣湯</h1></a></header>
