--- a/public/menu/index.html
+++ b/public/menu/index.html
@@ -16,7 +16,7 @@
   <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
   <![endif]-->
  
- <link rel="stylesheet" href="../styles/style.css" media="all">
+ <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
 <body><!--  onload="initialize()"> -->
   <div class="container bg1">
