--- a/public/shops/index.html
+++ b/public/shops/index.html
@@ -17,7 +17,7 @@
   <![endif]-->
 
   
- <link rel="stylesheet" href="../styles/style.css" media="all">
+ <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
 <body class="bg1" onload="initialize()">
   <div class="container">
