--- a/public/shops/index.html
+++ b/public/shops/index.html
@@ -19,8 +19,8 @@
   
  <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
-<body class="bg1" onload="initialize()">
-  <div class="container">
+<body>
+  <div class="container bg3">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
@@ -76,6 +76,7 @@
         <header class="logo"><a href="../"><h1>七宝麻辣湯</h1></a></header>
         <nav class="mainNav">
           <ul>
+            <li class="pageTop"><a href="../">トップページ</a></li>
             <li><a href="../about/">七宝麻辣湯について</a></li>
             <li><a href="../menu/">メニュー</a></li>
             <li class="cur"><a href="../shops/">店舗情報</a>
