--- a/public/company/index.html
+++ b/public/company/index.html
@@ -47,6 +47,7 @@
         <header class="logo"><a href="../"><h1>七宝麻辣湯</h1></a></header>
         <nav class="mainNav">
           <ul>
+            <li class="pageTop"><a href="../">トップページ</a></li>
             <li><a href="../about/">七宝麻辣湯について</a></li>
             <li><a href="../menu/">メニュー</a></li>
             <li><a href="../shops/">店舗情報</a></li>
