--- a/public/menu/drink.html
+++ b/public/menu/drink.html
@@ -19,7 +19,7 @@
  <link rel="stylesheet" href="../styles/base.css" media="all">
 </head>
 <body><!--  onload="initialize()"> -->
-  <div class="container bg1">
+  <div class="container bg2">
     <div class="contents">
       <article class="mainCont">
         <div class="section">
@@ -232,6 +232,7 @@
         <header class="logo"><a href="../"><h1>七宝麻辣湯</h1></a></header>
         <nav class="mainNav">
           <ul>
+            <li class="pageTop"><a href="../">トップページ</a></li>
             <li><a href="../about/">七宝麻辣湯について</a></li>
             <li class="cur"><a href="../menu/">メニュー</a>
               <ul class="sub">
